fix atf section on mobile

--- a/src/components/UFOScene/UFOScene.module.scss
+++ b/src/components/UFOScene/UFOScene.module.scss
@@ -72,6 +72,7 @@
   position: absolute;
   bottom: 15%;
   height: 10%;
+  min-height: 0%;
   width: auto;
   z-index: -1;
 
